@@ -117,15 +117,15 @@ public class SolrProcessManager {
     try (Stream<Path> pidFiles =
         Files.list(pidDir)
             .filter(p -> pidFilePattern.matcher(p.getFileName().toString()).matches())) {
-      for (Path p : pidFiles.collect(Collectors.toList())) {
+      for (Path p : pidFiles.toList()) {
         Optional<SolrProcess> process;
         if (p.toString().endsWith(".port")) {
           // On Windows, the file is a 'PORT' file containing the port number.
-          Integer port = Integer.valueOf(Files.readAllLines(p).get(0));
+          Integer port = Integer.valueOf(Files.readAllLines(p).getFirst());
           process = processForPort(port);
         } else {
           // On Linux, the file is a 'PID' file containing the process ID.
-          Long pid = Long.valueOf(Files.readAllLines(p).get(0));
+          Long pid = Long.valueOf(Files.readAllLines(p).getFirst());
           process = getProcessForPid(pid);
         }
         if (process.isPresent()) {
@@ -159,7 +159,7 @@ public class SolrProcessManager {
   }
 
   /**
-   * Gets the command line of a process as a string. For Windows we need to fetch command lines
+   * Gets the command line of a process as a string. For Windows, we need to fetch command lines
    * using a PowerShell command.
    *
    * @param ph the process handle
@@ -238,28 +238,7 @@ public class SolrProcessManager {
   }
 
   /** Represents a running Solr process */
-  public static class SolrProcess {
-    private final long pid;
-    private final int port;
-    private final boolean isHttps;
-
-    public SolrProcess(long pid, int port, boolean isHttps) {
-      this.pid = pid;
-      this.port = port;
-      this.isHttps = isHttps;
-    }
-
-    public long getPid() {
-      return pid;
-    }
-
-    public int getPort() {
-      return port;
-    }
-
-    public boolean isHttps() {
-      return isHttps;
-    }
+  public record SolrProcess(long pid, int port, boolean isHttps) {
 
     public String getLocalUrl() {
       return String.format(Locale.ROOT, "%s://localhost:%s/solr", isHttps ? "https" : "http", port);
